# waha-python-project

./: .env.example  .gitignore  Dockerfile  README.md  agent.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/controllers/: __init__.py  file_controller.py  group_controller.py  message_controller.py  session_controller.py
app/core/: __init__.py  config.py
app/routes/: __init__.py  files.py  groups.py  health.py  messages.py  session.py
app/schemas/: __init__.py  whatsapp.py
app/utils/: __init__.py  dependencies.py  logger.py  waha_client.py
docs/: api_reference.md  architecture.md  deployment.md  troubleshooting.md
